{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 94,
  "lineage": "df8ec8db-6358-e7c9-81f2-902d3cd694d6",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:221443951339:security-group/sg-0ae01ab23debfde3c",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae01ab23debfde3c",
            "ingress": [],
            "name": "talkesk-terraform-dr-eks-sg",
            "name_prefix": "",
            "owner_id": "221443951339",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dr",
              "Module": "EKS",
              "Name": "Talkdesk-dr-eks-sg",
              "Project": "Talkdesk on AWS"
            },
            "tags_all": {
              "Environment": "dr",
              "Module": "EKS",
              "Name": "Talkdesk-dr-eks-sg",
              "Project": "Talkdesk on AWS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc53438a5c00c9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.public_eip",
            "module.networking.aws_internet_gateway.public_igw",
            "module.networking.aws_nat_gateway.public_nat_gw",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_route_table_association.private_route_table_association",
            "module.networking.aws_route_table_association.public_route_table_association",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-1391201f",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-219-35-250.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.35.250",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-public-eip-gw",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "tags_all": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-public-eip-gw",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.public_igw",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-c0ad1ccc",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-9-42-233.us-west-1.compute.amazonaws.com",
            "public_ip": "52.9.42.233",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-public-eip-gw",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "tags_all": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-public-eip-gw",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.public_igw",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:221443951339:internet-gateway/igw-0cf3972c6a32b6453",
            "id": "igw-0cf3972c6a32b6453",
            "owner_id": "221443951339",
            "tags": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-public-internet-gw",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "tags_all": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-public-internet-gw",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "vpc_id": "vpc-0dbc53438a5c00c9b"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-1391201f",
            "connectivity_type": "public",
            "id": "nat-0ee7174efd919cfa9",
            "network_interface_id": "eni-0ee3048d83bbbbabd",
            "private_ip": "10.0.4.77",
            "public_ip": "54.219.35.250",
            "subnet_id": "subnet-01bdffb40b0d05849",
            "tags": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-public-nat-gw",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "tags_all": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-public-nat-gw",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.public_eip",
            "module.networking.aws_internet_gateway.public_igw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-c0ad1ccc",
            "connectivity_type": "public",
            "id": "nat-06ccfb4877e24b8b6",
            "network_interface_id": "eni-02bb593a0808775f7",
            "private_ip": "10.0.5.187",
            "public_ip": "52.9.42.233",
            "subnet_id": "subnet-00ad5d7d42fe6ec31",
            "tags": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-public-nat-gw",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "tags_all": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-public-nat-gw",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.public_eip",
            "module.networking.aws_internet_gateway.public_igw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:221443951339:route-table/rtb-0e7b6348a91fe59d1",
            "id": "rtb-0e7b6348a91fe59d1",
            "owner_id": "221443951339",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ee7174efd919cfa9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-private-route-table",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "tags_all": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-private-route-table",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "vpc_id": "vpc-0dbc53438a5c00c9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.public_eip",
            "module.networking.aws_internet_gateway.public_igw",
            "module.networking.aws_nat_gateway.public_nat_gw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:221443951339:route-table/rtb-00ff6c2247ab9853b",
            "id": "rtb-00ff6c2247ab9853b",
            "owner_id": "221443951339",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06ccfb4877e24b8b6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-private-route-table",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "tags_all": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-private-route-table",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "vpc_id": "vpc-0dbc53438a5c00c9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.public_eip",
            "module.networking.aws_internet_gateway.public_igw",
            "module.networking.aws_nat_gateway.public_nat_gw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:221443951339:route-table/rtb-03b88446932e96967",
            "id": "rtb-03b88446932e96967",
            "owner_id": "221443951339",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf3972c6a32b6453",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-public-route-table",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "tags_all": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-public-route-table",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "vpc_id": "vpc-0dbc53438a5c00c9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.public_igw",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034bb2f6f6038e77e",
            "route_table_id": "rtb-0e7b6348a91fe59d1",
            "subnet_id": "subnet-0d177ab43709711ff"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.public_eip",
            "module.networking.aws_internet_gateway.public_igw",
            "module.networking.aws_nat_gateway.public_nat_gw",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0392338e904826230",
            "route_table_id": "rtb-00ff6c2247ab9853b",
            "subnet_id": "subnet-03cf5c48fac4f5c06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.public_eip",
            "module.networking.aws_internet_gateway.public_igw",
            "module.networking.aws_nat_gateway.public_nat_gw",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e49764b69918a6e7",
            "route_table_id": "rtb-03b88446932e96967",
            "subnet_id": "subnet-01bdffb40b0d05849"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_internet_gateway.public_igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9cd1e889fb788de",
            "route_table_id": "rtb-03b88446932e96967",
            "subnet_id": "subnet-00ad5d7d42fe6ec31"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_internet_gateway.public_igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:221443951339:subnet/subnet-0d177ab43709711ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.128.0/19",
            "id": "subnet-0d177ab43709711ff",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "221443951339",
            "tags": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-private-subnet",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "tags_all": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-private-subnet",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "vpc_id": "vpc-0dbc53438a5c00c9b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:221443951339:subnet/subnet-03cf5c48fac4f5c06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.160.0/19",
            "id": "subnet-03cf5c48fac4f5c06",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "221443951339",
            "tags": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-private-subnet",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "tags_all": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-private-subnet",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "vpc_id": "vpc-0dbc53438a5c00c9b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:221443951339:subnet/subnet-01bdffb40b0d05849",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-01bdffb40b0d05849",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "221443951339",
            "tags": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-public-subnet",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "tags_all": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-public-subnet",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "vpc_id": "vpc-0dbc53438a5c00c9b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:221443951339:subnet/subnet-00ad5d7d42fe6ec31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-00ad5d7d42fe6ec31",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "221443951339",
            "tags": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-public-subnet",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "tags_all": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-public-subnet",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "vpc_id": "vpc-0dbc53438a5c00c9b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:221443951339:vpc/vpc-0dbc53438a5c00c9b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0df85b5c938a1ba7d",
            "default_route_table_id": "rtb-045dd6c59d976b5ff",
            "default_security_group_id": "sg-0a710df7e483efed8",
            "dhcp_options_id": "dopt-acd812ca",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dbc53438a5c00c9b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-045dd6c59d976b5ff",
            "owner_id": "221443951339",
            "tags": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-vpc",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            },
            "tags_all": {
              "Environment": "dr",
              "Module": "VPC",
              "Name": "Talkdesk-dr-vpc",
              "Project": "Talkdesk on AWS",
              "kubernetes.io/cluster/eks-dr": "shared"
            }
          }
        }
      ]
    }
  ]
}